--- a/src/component/Auth/Signin/Signin.css
+++ b/src/component/Auth/Signin/Signin.css
@@ -1,4 +1,37 @@
+.rounded-t-5 {
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  padding: .35rem;
+  border-color: #0d6efd;
+   color:white;
+  font-size: 1rem;
+  font-weight: 400;
+} 
 
+
+
+/* .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+
+  background-color: #fff2c0 !important;
+  color: black !important;
+} */
+
+
+/* .cascading-right {
+  margin-right: -50px;
+}
+
+@media (max-width: 900px) {
+  .cascading-right {
+    margin-right: 0;
+  }
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+} */
 .gradient-custom-2 {
   /* fallback for old browsers */
   background: #fccb90;
